force-app/main/default/objects/ArticleFeedback__c.object
<CustomObject>
    <fields>
        <fullName>ArticleLink__c</fullName>
        <formula>HYPERLINK(
  IF(
      CONTAINS($Api.Partner_Server_URL_260, &apos;visual&apos;), 
      &apos;https://&apos;+
      MID($Api.Partner_Server_URL_260, FIND( &apos;visual&apos;, $Api.Partner_Server_URL_260)-4,4)
      +&apos;salesforce.com/&apos;,
      LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))
  ) +  Article_Id__c,  &apos;Open Article&apos;
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Id__c</fullName>
        <label>Article Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Article_Type__c</fullName>
        <label>Article Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FAQ</fullName>
                </value>
                <value>
                    <fullName>HR FAQ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_URL__c</fullName>
        <label>Article URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Article Feedback</relationshipLabel>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ContactID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Article Feedback</relationshipLabel>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FeedbackBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feedback By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Article_Feedback</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>No__c</fullName>
        <defaultValue>false</defaultValue>
        <label>No?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_this_article_helpful__c</fullName>
        <label>Was this article helpful?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yes?</label>
        <type>Checkbox</type>
    </fields>
    <label>Article Feedback</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Was_this_article_helpful__c</columns>
        <columns>Case__c</columns>
        <columns>Comments__c</columns>
        <columns>ArticleLink__c</columns>
        <columns>ContactID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Article Feedback Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Article Feedback</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>